k3s/zerobyte/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zerobyte-svc
  namespace: backups
spec:
  selector:
    app: zerobyte
  ports:
    - name: http
      port: 80
      targetPort: 4096
