k3s/zerobyte/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zerobyte-ingress
  namespace: backups
spec:
  rules:
    - host: zerobyte.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zerobyte-svc
                port:
                  number: 80
    - host: zerobyte.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zerobyte-svc
                port:
                  number: 80
